<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFE0"
    android:orientation="vertical" >
    
        <EditText
        android:id="@+id/oldpsw"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="@string/oldpsw"
        android:inputType="text"
        android:textColor="@color/gray" />
        <EditText
        android:id="@+id/newpsw"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="@string/newpsw"
        android:inputType="text"
        android:textColor="@color/gray" />
        <EditText
        android:id="@+id/surepsw"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:hint="@string/surepsw"
        android:inputType="text"
        android:textColor="@color/gray" />
        
        <LinearLayout
         	android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:orientation="horizontal">
            <Button 
               android:id="@+id/confirm"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="修改"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="                  "
                />
            <Button 
               android:id="@+id/cancel"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="取消"
                />
        </LinearLayout>

</LinearLayout>
